--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.563.0",
     "match-sorter": "^8.2.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
+    "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
