--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
     "input-otp": "^1.4.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.563.0",
