--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.563.0",
     "match-sorter": "^8.2.0",
+    "moment": "^2.30.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -33,6 +36,7 @@
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
