--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
